# mono

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: api.h  application.cpp  application.h  mono.cpp  mono.h  processes.cpp  processes.h  queue.h  tasker.h  taskermgr.cpp  taskermgr.h  type.h  util.h
src/tasks/: daily_news_task.h  daily_stock_task.h  daily_tasks.h  task_base.h
